[tool.poetry]
name = "gnr_sargentos"
version = "0.1.0"
description = "Sistema de avaliações de guardas"
authors = [Smurf Oliveira]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
firebase-admin = "^6.2.0"
discord.py = "^2.3.2"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
# podes adicionar aqui, se quiseres, tipo black, mypy, etc.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
